# HRRRSkewT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ReferenceJupyter/: HRRRSkewT-Full.ipynb
hrrrskewt/: __init__.py  calc.py  cli.py  download.py  plot.py  plot_cli_settings.py  xarray_io.py
scripts/: video_gen.py
